# surface-crack-classification

./: .gitignore  README.md  pyproject.toml
Models/CNN/: CNN.ipynb  best_hparams.json
Models/FFNN/: FFNN.ipynb  best_hparams.json
Models/RNN/: RNN.ipynb  best_hparams.json
Notebooks/: 1.Data_Warehouse.ipynb  2.Data_Visualization.ipynb  3.Images_Preprocessing.ipynb  4.Image_augmentation.ipynb  5.Images_Imbalance.ipynb
utils/: __init__.py  augmentation_script.py  config.py  dataset.py  hparam_search.py  resize_script.py  training.py  visualization.py
