[project]
name = "surface-crack-classification"
version = "0.1.0"
description = "Multi-architecture neural network comparison for surface fracture detection (FFNN, LSTM-RNN, CNN)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "ipynb>=0.5.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "optuna>=4.8.0",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
]
